<resources>
    <string name="app_name">Diving Simulation</string>




    <string name="database_logbooks">logBook</string>
    <string name="database_accidents">accidents</string>
    <string name="database_certificates">certificates</string>
    <string name="database_medical">medical</string>


    <string name="donothavaaccount">Don\'t have an account?</string>
    <string name="Createanewaccount">Create a new account</string>
    <string name="forgetpasswod">Did you forget the password?</string>
    <string name="welcome">Welcome !</string>
    <string name="pleaseloginorsignuptocontuinieourapp">Please login or sign up to continue our app</string>
    <string name="SignIn">Sign in</string>
    <string name="DoYouhaveAnAccout">Do You have An Account ? </string>
    <string name="continuewithgoogle">Continue with Google</string>
    <string name="signup">Sign Up</string>
    <string name="createnewaccount">Create an new account</string>
    <string name="username">User Name</string>
    <string name="confrimpassword">confirm Password</string>
    <string name="enteryouremail">Enter Your Email</string>
    <string name="enterusername">Enter Username</string>
    <string name="enterpassword">Enter Password</string>>

    <string name="search_your_recipes">Search Your Recipes…</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="meal_for_inspiration">Meal For Inspiration</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="dot_loading">...</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="login_as_guest">Login As Guest</string>
    <string name="login_with_google">Login With Google</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_have_account">Already Have an Account ? </string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="no_internet">No Internet Connection, Please Check Your Network</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users_profile_image">profileImage</string>
    <string name="users_reference">Users</string>
    <string name="title_activity_medical">MedicalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- For Weather Section  -->
    <string name="degree_symbol">°</string>
    <string name="percentage_symbol">%</string>
    <string name="this_week_weather">This is the Week Weather</string>
    <string name="this_weather_week_hint">You Can Press on any day to see all Weather Conditions</string>
    <string name="location_permission_hint">We cannot find your Location!</string>
    <string name="location_permission_instruction">Please allow Weather Way to access your Location</string>
    <string name="loading_dialog_text">Loading..</string>

    <string name="gps_text">GPS</string>
    <string name="map_text">Map</string>

    <string name="google_maps_api_key">AIzaSyDQSsNVszmkDm_KlkN6VRrn_49qUDzNlmw</string>
    <string name="api_key">3e6f518ff7d5d207d9c201f3c1ec34f6</string>

    <string name="unknown">Unknown</string>
    <string name="allow">Allow</string>
    <string name="today_s_weather">Today\'s Weather</string>
    <string name="alarm">Alarms</string>
    <string name="there_is_no_alarm_items">There is No Alarm Items!!</string>
    <string name="there_is_no_alrets">There is No Alrets</string>
    <string name="weather_is_fine">Weather is fine, keep going you are safe</string>
    <string name="dismiss">Dismiss</string>
    <string name="configrations_setup">Configrations Setup</string>
    <string name="location">Location:</string>
    <string name="notification">Notification:</string>
    <string name="save">Save</string>
    <string name="use_this_location">Use This Location ?</string>
    <string name="change_location">Change Location</string>
    <string name="submit_location">Submit Location</string>
    <string name="favorite">Favorite</string>
    <string name="there_is_no_fav_items">There is No Fav Items!!</string>
    <string name="settings">Settings</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="language">Language:</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temp_unit">Temp Unit:</string>
    <string name="celsius">celsius</string>
    <string name="kelvin">kelvin</string>
    <string name="fahrenheit">fahrenheit</string>
    <string name="wind_unit">Wind Unit:</string>
    <string name="meter_second">meter / second</string>
    <string name="mile_hour">mile / hour</string>
    <string name="home">Home</string>
    <string name="meter_per_second">m/s</string>
    <string name="units">metric</string>

    <string name="change_location_btn">Change Location</string>
    <string name="use_location_btn">Use Location</string>
    <string name="append_old_btn">Append Old</string>
    <string name="create_new_btn">Create New</string>
    <string name="download_question">Do you want to create new file or append the old one (if exist) ?</string>
    <string name="download_weather_title">Download Weather Data</string>
    <string name="title_activity_hospitals_map">HospitalsMapActivity</string>

    <string name="dan_emr">DAN Emergency Hotline: +39-06-4211-5685</string>
    <string name="dan_info">Divers Alert Network \nClick HERE for more info</string>
    <string name="dan_name">Divers Alert Network - DAN</string>
    <string name="dan_expectaion">
    If you ever need help, DAN will be here for you. DAN medics are on call 24 hours a day, 365 days a year, to assist divers and medical personnel in managing diving emergencies.

    What to expect when you call the DAN Emergency Hotline:

    You will be asked for your name, location and callback number. If you are a DAN Member, please provide your DAN member number as well.

    DAN medics may make an immediate recommendation or ask to call you back after making arrangements. DAN may reach out to its network to provide the best possible assistance.

    If the call drops, we will immediately call you back at the callback number you provided. If you don’t hear from us in minutes, try calling back. Remember to dial the country code (+1) when calling the U.S. from another country.
</string>
    <string name="title_activity_add_log_book">AddLogBookActivity</string>


</resources>