<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical"
    android:padding="@dimen/margin_small_start_end">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_tiny_start_end"
        android:text="@string/download_weather_title"
        android:textColor="@color/main_color"
        android:textSize="@dimen/mid_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/download_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/mid_text_size"
        android:text="@string/download_question"
        android:textSize="@dimen/small_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_text_size"
        android:orientation="horizontal"
        android:padding="@dimen/small_text_size"
        android:weightSum="2">

        <Button
            android:id="@+id/append_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_tiny_start_end"
            android:layout_weight="1"
            android:background="@drawable/button_shape_main_color"
            android:text="@string/append_old_btn"
            android:textColor="@color/whitey"
            android:textSize="@dimen/tiny_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/create_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_tiny_start_end"
            android:layout_weight="1"
            android:background="@drawable/button_shape_main_color"
            android:text="@string/create_new_btn"
            android:textColor="@color/whitey"
            android:textSize="@dimen/tiny_text_size"
            android:textStyle="bold"

            />

    </LinearLayout>
</LinearLayout>