<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.SignupActivity">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_130sdp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dive_logo" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#070707"
        android:textSize="@dimen/mid_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/email_input_et"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <TextView
        android:id="@+id/hintTextView"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/pleaseloginorsignuptocontuinieourapp"
        android:textSize="@dimen/tiny_text"
        app:layout_constraintStart_toStartOf="@+id/welcomeTextView"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/whitey"
        app:boxStrokeErrorColor="@color/main_color_dark"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorIconTint="@color/secondary_color"
        app:hintTextColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hintTextView"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/secondary_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:textColor="@color/dark"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/secondary_color"
        app:boxStrokeErrorColor="@color/main_color_dark"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorIconTint="@color/secondary_color"
        app:hintTextColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input_et"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/secondary_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColor="@color/dark"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/email_login_btn"
        android:layout_width="348dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_color_dark"
        android:text="@string/login"
        app:cardCornerRadius="8dp"
        app:cardElevation="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_et">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/tiny_margin"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/whitey"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="@id/password_input_et"
        app:layout_constraintStart_toStartOf="@id/password_input_et"
        app:layout_constraintTop_toBottomOf="@id/email_login_btn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/donothavaaccount"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/password_input_et"
            app:layout_constraintTop_toBottomOf="@id/email_login_btn" />

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/signup"
            android:textColor="@color/secondary_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/password_input_et"
            app:layout_constraintTop_toBottomOf="@id/email_login_btn" />

    </LinearLayout>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/or"
        android:textColor="@color/secondary_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/google_login_btn"
        app:layout_constraintEnd_toEndOf="@id/linear_layout"
        app:layout_constraintStart_toStartOf="@id/linear_layout"
        app:layout_constraintTop_toBottomOf="@id/linear_layout" />

    <Button
        android:id="@+id/google_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/main_color_dark"
        android:drawableEnd="@drawable/ic_google"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:text="@string/login_with_google"
        android:textAllCaps="false"
        android:textColor="@color/whitey"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/secondary_color"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>