<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.SignupActivity">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginTop="25dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dive_logo" />

    <TextView
        android:id="@+id/signupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_margin"
        android:text="@string/signup"
        android:textColor="#070707"
        android:textSize="@dimen/mid_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/full_name_input_et"
        app:layout_constraintTop_toBottomOf="@id/logoImage" />

    <TextView
        android:id="@+id/hintTextView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/createnewaccount"
        android:textSize="@dimen/tiny_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/signupTextView"
        app:layout_constraintTop_toBottomOf="@id/signupTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/full_name_input_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/name"
        app:boxStrokeColor="@color/whitey"
        app:endIconMode="clear_text"
        app:errorIconTint="@color/secondary_color"
        app:hintTextColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hintTextView"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/secondary_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/full_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="name"
            android:textColor="@color/dark"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/whitey"
        app:boxStrokeErrorColor="@color/main_color_dark"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorIconTint="@color/secondary_color"
        app:hintTextColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/full_name_input_et"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/secondary_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:textColor="@color/dark"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/whitey"
        app:boxStrokeErrorColor="@color/main_color_dark"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorIconTint="@color/secondary_color"
        app:hintTextColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input_et"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/secondary_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColor="@color/dark"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeat_password_input_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/repeat_password"
        app:boxStrokeColor="@color/whitey"
        app:boxStrokeErrorColor="@color/main_color_dark"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorIconTint="@color/secondary_color"
        app:hintTextColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input_et"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/secondary_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColor="@color/dark"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/email_sign_up_btn"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00003D"
        app:cardCornerRadius="8dp"
        app:cardElevation="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="@+id/repeat_password_input_et"
        app:layout_constraintStart_toStartOf="@+id/repeat_password_input_et"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password_input_et">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/tiny_margin"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/whitey"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/you_user_sign_up_li"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@id/email_sign_up_btn"
        app:layout_constraintRight_toRightOf="@id/email_sign_up_btn"
        app:layout_constraintTop_toBottomOf="@id/email_sign_up_btn">

        <TextView
            android:id="@+id/you_user_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DoYouhaveAnAccout"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sign_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingRight="5dp"
            android:text="@string/SignIn"
            android:textColor="@color/secondary_color"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>